@@ -450,6 +450,10 @@ GTK:
 
 - Generate events for two auxiliary mouse buttons in wxGTK (Marcin Wojdyr).
 
+MSW:
+
+- Added wxGCDC(wxEnhMetaFileDC) ctor (Marcin Wojdyr).
+
 
 2.9.2: (released 2011-07-05)
 ------
